fix hiding dropdown on iOS

--- a/addons/Assessments_Navigation_Bar/src/style.css
+++ b/addons/Assessments_Navigation_Bar/src/style.css
@@ -100,6 +100,7 @@
         background: none;
         box-shadow: none;
         scroll-behavior: smooth;
+        z-index: 1;
     }
 
     /* hide scroll bar*/
